--- a/src/assets/styles/styles.scss
+++ b/src/assets/styles/styles.scss
@@ -1,1 +1,55 @@
 @import "~@angular/material/prebuilt-themes/deeppurple-amber.css";
+@import "reset";
+@import "colors";
+
+body {
+  font-family: 'Roboto', sans-serif;
+  line-height: 1.6;
+  font-weight: 300;
+}
+
+h1 {
+  font-size: 24px;
+  text-transform: capitalize;
+  margin-bottom: 20px;
+}
+
+.button {
+  border: 1px solid black;
+  font-size: 16px;
+  padding: 6px 18px;
+  cursor: pointer;
+}
+
+.container {
+  max-width: 1240px;
+  padding: 0 24px;
+  margin: 0 auto;
+  width: 100%;
+}
+
+.icon {
+  border: 1px solid black;
+  padding: 3px;
+  background: white;
+  margin: 4px;
+  color: black;
+  cursor: pointer;
+}
+
+.icon {
+  &--round {
+    @extend .icon;
+    border-radius: 50%;
+  }
+
+  &--square {
+    @extend .icon;
+    border-radius: 2px;
+  }
+}
+
+.avatar--small {
+  width: 32px;
+  height: 32px;
+}
