--- a/src/app/blog/article/article.component.html
+++ b/src/app/blog/article/article.component.html
@@ -25,7 +25,7 @@
         <section class="article__right">
             <header class="article__header">
                 <div></div>
-                <mat-icon class="icon--round">share</mat-icon>
+                <mat-icon class="icon--round">launch</mat-icon>
             </header>
             <div class="article__content">
                 asdasdasd
