--- a/src/assets/styles/styles.scss
+++ b/src/assets/styles/styles.scss
@@ -14,6 +14,25 @@ h1 {
   margin-bottom: 20px;
 }
 
+h2 {
+  font-size: 20px;
+  margin-bottom: 20px;
+}
+
+h3 {
+  font-size: 18px;
+  margin-bottom: 10px;
+}
+
+h4 {
+  font-size: 16px;
+  margin-bottom: 10px;
+}
+
+p {
+  margin-bottom: 10px;
+}
+
 .button {
   border: 1px solid black;
   font-size: 16px;
@@ -52,4 +71,5 @@ h1 {
 .avatar--small {
   width: 32px;
   height: 32px;
+  margin: 4px;
 }
