--- a/src/assets/styles/styles.scss
+++ b/src/assets/styles/styles.scss
@@ -48,12 +48,16 @@ p {
 }
 
 .icon {
-  border: 1px solid black;
-  padding: 3px;
+  border: 2px solid black;
+  width: auto !important;
+  height: auto !important;
+  padding: 4px;
   background: white;
   margin: 4px;
   color: black;
   cursor: pointer;
+  box-sizing: border-box;
+  font-size: 22px;
 }
 
 .icon {
