articles navigation added

--- a/src/app/blog/articles/articles.component.html
+++ b/src/app/blog/articles/articles.component.html
@@ -4,4 +4,13 @@
         <mat-icon class="icon--square">add</mat-icon>
     </div>
     <book-article-preview [article]="article"></book-article-preview>
+    <footer class="articles__footer">
+        <div class="articles__nav">
+            <mat-icon class="icon--round">keyboard_arrow_left</mat-icon>
+            <mat-icon class="icon--round">keyboard_arrow_right</mat-icon>
+        </div>
+        <div class="articles__total">
+            <b>5</b> items total
+        </div>
+    </footer>
 </div>
