--- a/src/assets/styles/styles.scss
+++ b/src/assets/styles/styles.scss
@@ -2,6 +2,14 @@
 @import "reset";
 @import "colors";
 
+@import "components/input";
+
+@import "components/article";
+
+* {
+  box-sizing: border-box;
+}
+
 body {
   font-family: 'Roboto', sans-serif;
   line-height: 1.6;
