--- a/src/app/blog/edit-article/edit-article.component.html
+++ b/src/app/blog/edit-article/edit-article.component.html
@@ -53,7 +53,15 @@
                     <div class="form-field__label">Abstract / Summary</div>
                     <textarea type="text"
                               class="form-field__textarea"
+                              maxlength="abstractMaxLength"
                               placeholder="Abstract / Summary"></textarea>
+                    <div class="form-field__symbols">
+                        123 / {{abstractMaxLength}}
+                    </div>
+                </div>
+                <div class="form-field form-field--full">
+                    <div class="form-field__label">Choose a cover color</div>
+                    <book-color-picker></book-color-picker>
                 </div>
             </div>
         </section>
