--- a/src/assets/styles/components/input.scss
+++ b/src/assets/styles/components/input.scss
@@ -13,6 +13,7 @@
   &__label {
     color: white;
     font-size: 1rem;
+    margin-bottom: 6px;
   }
 
   &--with-arrow {
@@ -25,7 +26,7 @@
       border-left: 5px solid transparent;
       border-right: 5px solid transparent;
       border-top: 5px solid white;
-      top: 40px;
+      bottom: 12px;
       right: 10px;
     }
   }
@@ -62,6 +63,7 @@
   &__textarea {
     @extend .form-field__input;
     max-width: 100%;
+    min-height: 100px;
   }
 
   &__select {
@@ -75,6 +77,13 @@
     font-size: 1rem;
     cursor: pointer;
     position: relative;
+  }
+
+  &__symbols {
+    position: absolute;
+    bottom: 10px;
+    right: 13px;
+    font-size: .8rem;
   }
 }
 
