--- a/src/assets/styles/components/input.scss
+++ b/src/assets/styles/components/input.scss
@@ -12,8 +12,6 @@
 
   &__label {
     color: white;
-    font-size: 1rem;
-    margin-bottom: 6px;
   }
 
   &--with-arrow {
@@ -39,24 +37,27 @@
     width: 100%;
     outline: none;
     color: white;
-    font-size: 1rem;
     &::-webkit-input-placeholder {
       color: white;
       font-weight: 300;
+      font-size: 0.8rem;
     }
     &::-moz-placeholder {
       color: white;
       font-weight: 300;
+      font-size: 0.8rem;
     }
     /* Firefox 19+ */
     &:-moz-placeholder {
       color: white;
       font-weight: 300;
+      font-size: 0.8rem;
     }
     /* Firefox 18- */
     &:-ms-input-placeholder {
       color: white;
       font-weight: 300;
+      font-size: 0.8rem;
     }
   }
 
@@ -67,16 +68,8 @@
   }
 
   &__select {
-    appearance: none;
-    background: rgba(0, 0, 0, 0.2);
-    border: 0;
-    padding: 6px;
-    width: 100%;
-    outline: none;
-    color: white;
-    font-size: 1rem;
+    @extend .form-field__input;
     cursor: pointer;
-    position: relative;
   }
 
   &__symbols {
