--- a/src/assets/styles/styles.scss
+++ b/src/assets/styles/styles.scss
@@ -8,12 +8,13 @@
 
 * {
   box-sizing: border-box;
+  font-weight: 300;
+  font-size: 1rem;
 }
 
 body {
-  font-family: 'Roboto', sans-serif;
-  line-height: 1.6;
-  font-weight: 300;
+  font-family: 'Montserrat', sans-serif;
+  line-height: 2rem;
 }
 
 h1 {
