--- a/src/app/blog/edit-article/edit-article.component.html
+++ b/src/app/blog/edit-article/edit-article.component.html
@@ -3,67 +3,76 @@
         <section class="article__left">
             <header class="article__header">
                 <mat-icon class="icon--round">keyboard_backspace</mat-icon>
+                <h1 class="article__header-title">Edit Media Details</h1>
                 <div class="article__header-controls">
                     <mat-icon class="icon--square">edit</mat-icon>
                     <img class="avatar avatar--small" src="assets/images/lannister.jpg">
                 </div>
             </header>
-            <div class="article__edit-form">
+            <form class="article__edit-form" [formGroup]="form">
                 <div class="form-field form-field--full">
                     <div class="form-field__label">Title *</div>
-                    <input type="text" class="form-field__input" placeholder="This is title">
+                    <input type="text" class="form-field__input"
+                           formControlName="title"
+                           placeholder="This is title">
                 </div>
                 <div class="form-field form-field--full">
                     <div class="form-field__label">Tags</div>
-                    <input type="text" class="form-field__input" placeholder="Type to add">
+                    <input type="text" class="form-field__input"
+                           formControlName="tags"
+                           placeholder="Type to add">
                 </div>
                 <div class="form-field form-field--with-arrow form-field--half">
-                    <div class="form-field__label">Month & year</div>
-                    <select class="form-field__select">
+                    <div class="form-field__label">Month</div>
+                    <select class="form-field__select" formControlName="month">
                         <option value="December">December</option>
                         <option value="December">November</option>
                     </select>
                 </div>
                 <div class="form-field form-field--with-arrow form-field--half">
                     <div class="form-field__label">Year</div>
-                    <select class="form-field__select">
+                    <select class="form-field__select" formControlName="year">
                         <option value="December">2014</option>
                         <option value="December">2015</option>
                     </select>
                 </div>
                 <div class="form-field form-field--with-arrow form-field--half">
                     <div class="form-field__label">School</div>
-                    <select class="form-field__select">
+                    <select class="form-field__select" formControlName="school">
                         <option value="1">1</option>
                         <option value="2">2</option>
                     </select>
                 </div>
                 <div class="form-field form-field--with-arrow form-field--half">
                     <div class="form-field__label">Course</div>
-                    <select class="form-field__select">
+                    <select class="form-field__select" formControlName="course">
                         <option value="1">1</option>
                         <option value="2">2</option>
                     </select>
                 </div>
                 <div class="form-field form-field--full">
                     <div class="form-field__label">Webpage / url</div>
-                    <input type="text" class="form-field__input" placeholder="Webpage / url">
+                    <input type="text" class="form-field__input"
+                           formControlName="url"
+                           placeholder="Webpage / url">
                 </div>
                 <div class="form-field form-field--full">
                     <div class="form-field__label">Abstract / Summary</div>
                     <textarea type="text"
                               class="form-field__textarea"
+                              formControlName="abstract"
                               maxlength="abstractMaxLength"
                               placeholder="Abstract / Summary"></textarea>
                     <div class="form-field__symbols">
-                        123 / {{abstractMaxLength}}
+                        {{form.get('abstract').value.length}} / {{abstractMaxLength}}
                     </div>
                 </div>
                 <div class="form-field form-field--full">
                     <div class="form-field__label">Choose a cover color</div>
-                    <book-color-picker></book-color-picker>
+                    <book-color-picker (picked)="setColor($event)"></book-color-picker>
                 </div>
-            </div>
+                <button class="button" (click)="saveArticle()">Save</button>
+            </form>
         </section>
         <section class="article__right">
             <header class="article__header">
