--- a/src/assets/styles/components/article.scss
+++ b/src/assets/styles/components/article.scss
@@ -7,6 +7,11 @@
     display: flex;
     justify-content: space-between;
     margin-bottom: 20px;
+    align-items: center;
+  }
+
+  &__header-title {
+    margin-bottom: 0;
   }
 
   &__left {
