blog storage fixes

--- a/src/app/blog/article-preview/article-preview.component.html
+++ b/src/app/blog/article-preview/article-preview.component.html
@@ -3,7 +3,7 @@
     <h4 mat-card-content>{{article.title}}</h4>
     <div mat-card-subtitle>
         <p>by Jamie Lannister</p>
-        <p>{{article.date | date}}</p>
+        <p>{{article.month}} {{article.year}}</p>
     </div>
     <footer class="article-preview__footer" mat-card-content>
         <div class="article-preview__actions">
