--- a/src/app/blog/article-preview/article-preview.component.html
+++ b/src/app/blog/article-preview/article-preview.component.html
@@ -13,7 +13,7 @@
             <mat-icon class="icon--round">launch</mat-icon>
         </div>
         <div class="article-preview__actions">
-            <a [routerLink]="['/blog', 'article', article.id, 'edit']">
+            <a [routerLink]="['/blog', 'edit-article']" [queryParams]="{articleId: article.id}">
                 <mat-icon class="icon--round">edit</mat-icon>
             </a>
             <img class="avatar avatar--small" src="assets/images/lannister.jpg">
