--- a/src/app/blog/article/article.component.html
+++ b/src/app/blog/article/article.component.html
@@ -2,7 +2,9 @@
     <div class="article">
         <section class="article__left">
             <header class="article__header">
-                <mat-icon class="icon--round">keyboard_backspace</mat-icon>
+                <a [routerLink]="['/blog', 'edit-article']">
+                    <mat-icon class="icon--square">add</mat-icon>
+                </a>
                 <div class="article__header-controls">
                     <mat-icon class="icon--square">edit</mat-icon>
                     <img class="avatar avatar--small" src="assets/images/lannister.jpg">
@@ -15,7 +17,7 @@
                     <div class="article__tag">Tag2</div>
                 </div>
                 <div class="article__author"> by Jaime Lannister</div>
-                <div class="article__date">{{article.date | date: 'MMMM yyyy'}}</div>
+                <div class="article__date">{{article.month}} {{article.year}}</div>
                 <p class="article__description">
                     {{article.description | truncate: 700: descriptionExpanded}}
                 </p>
