--- a/src/app/blog/articles/articles.component.html
+++ b/src/app/blog/articles/articles.component.html
@@ -8,8 +8,16 @@
     <book-article-preview [article]="currentArticle"></book-article-preview>
     <footer class="articles__footer">
         <div class="articles__nav">
-            <mat-icon class="icon--round">keyboard_arrow_left</mat-icon>
-            <mat-icon class="icon--round">keyboard_arrow_right</mat-icon>
+            <mat-icon class="icon--round"
+                      [class.icon--disabled]="!hasPrev"
+                      (click)="getPrevArticle()">
+                keyboard_arrow_left
+            </mat-icon>
+            <mat-icon class="icon--round"
+                      [class.icon--disabled]="!hasNext"
+                      (click)="getNextArticle()">
+                keyboard_arrow_right
+            </mat-icon>
         </div>
         <div class="articles__total">
             <b>{{articles.length}}</b> items total
