--- a/src/app/blog/edit-article/edit-article.component.html
+++ b/src/app/blog/edit-article/edit-article.component.html
@@ -34,8 +34,8 @@
                 <div class="form-field form-field--with-arrow form-field--half">
                     <div class="form-field__label">Year</div>
                     <select class="form-field__select" formControlName="year">
-                        <option value="December">2014</option>
-                        <option value="December">2015</option>
+                        <option value="2014">2014</option>
+                        <option value="2015">2015</option>
                     </select>
                 </div>
                 <div class="form-field form-field--with-arrow form-field--half">
