--- a/src/app/blog/article/article.component.html
+++ b/src/app/blog/article/article.component.html
@@ -1,6 +1,6 @@
 <div class="container">
     <div class="article" *ngIf="article; else articleNotFound">
-        <section class="article__left">
+        <section class="article__left" [style.background-color]="article.color">
             <header class="article__header">
                 <a [routerLink]="['/blog', 'edit-article']">
                     <mat-icon class="icon--square">add</mat-icon>
