--- a/src/app/blog/article/article.component.html
+++ b/src/app/blog/article/article.component.html
@@ -6,9 +6,19 @@
                     <mat-icon class="icon--square">add</mat-icon>
                 </a>
                 <div class="article__header-controls">
-                    <a [routerLink]="['/blog', 'edit-article']" [queryParams]="{articleId: article.id}">
+                    <div class="icon__wrapper">
                         <mat-icon class="icon--square">edit</mat-icon>
-                    </a>
+                        <div class="icon__menu">
+                            <a [routerLink]="['/blog', 'edit-article']"
+                               [queryParams]="{articleId: article.id}"
+                               class="icon__option">
+                                Edit
+                            </a>
+                            <span (click)="removeArticle()" class="icon__option">
+                                Remove
+                            </span>
+                        </div>
+                    </div>
                     <img class="avatar avatar--small" src="assets/images/lannister.jpg">
                 </div>
             </header>
