tinymce height adjustment

--- a/src/app/blog/edit-article/edit-article.component.html
+++ b/src/app/blog/edit-article/edit-article.component.html
@@ -84,7 +84,7 @@
             </header>
             <editor apiKey="2ihq8yvel0tjcpc6dnkh3w9es6g52x5vpt50pfotl97we39n"
                     [formControl]="form.get('description')"
-                    [init]="{plugins: 'link, image'}">
+                    [init]="{plugins: 'link, image', height: '732'}">
             </editor>
         </section>
 
