--- a/src/assets/styles/styles.scss
+++ b/src/assets/styles/styles.scss
@@ -76,6 +76,10 @@ p {
 }
 
 .icon {
+  user-select: none;
+  &:hover {
+    background: #eee;
+  }
   &--disabled {
     opacity: .3;
     pointer-events: none;
