--- a/src/assets/styles/components/article.scss
+++ b/src/assets/styles/components/article.scss
@@ -24,6 +24,7 @@
 
   &__right {
     padding: 1rem;
+    padding-left: 4rem;
     width: 50%;
     padding-bottom: 0;
   }
@@ -45,6 +46,7 @@
     margin: auto;
     width: 100%;
     margin-bottom: 20px;
+    word-wrap: break-word;
   }
 
   &__tags {
