author logic added

--- a/src/app/blog/article-preview/article-preview.component.html
+++ b/src/app/blog/article-preview/article-preview.component.html
@@ -2,7 +2,7 @@
     <img mat-card-image src="/assets/images/preview.jpg">
     <h4 mat-card-content>{{article.title}}</h4>
     <div mat-card-subtitle>
-        <p>by Jamie Lannister</p>
+        <p>{{article.author}}</p>
         <p>{{article.month}} {{article.year}}</p>
     </div>
     <footer class="article-preview__footer" mat-card-content>
