--- a/src/app/blog/edit-article/edit-article.component.html
+++ b/src/app/blog/edit-article/edit-article.component.html
@@ -82,7 +82,7 @@
                                        (picked)="setColor($event)">
                     </book-color-picker>
                 </div>
-                <button class="button" (click)="saveArticle()">Save</button>
+                <button class="button" (click)="publishArticle()">Publish article</button>
             </form>
         </section>
         <section class="article__right">
