--- a/src/app/shared/components/select/select.component.html
+++ b/src/app/shared/components/select/select.component.html
@@ -3,7 +3,7 @@
         <img class="select__img" *ngIf="chosen.imageSrc" [src]="chosen.imageSrc" alt=""/>
         {{chosen.text}}
     </div>
-    <div class="select__options">
+    <div class="select__options" [hidden]="isCoolDown">
         <div class="select__option" *ngFor="let option of options" (click)="chooseOption(option)">
             <img class="select__img" *ngIf="option.imageSrc" [src]="option.imageSrc" alt=""/>
             {{option.text}}
