article with no draft editing fix

--- a/src/app/blog/articles/articles.component.html
+++ b/src/app/blog/articles/articles.component.html
@@ -20,7 +20,7 @@
             </mat-icon>
         </div>
         <div class="articles__total">
-            <b>{{articles.length}}</b> items total
+            {{articles.length}} items total
         </div>
     </footer>
 </div>
