article full width when expanded

--- a/src/assets/styles/components/article.scss
+++ b/src/assets/styles/components/article.scss
@@ -21,6 +21,10 @@
     color: white;
     padding-bottom: 60px;
     position: relative;
+
+    &--full {
+      width: 100%;
+    }
   }
 
   &__right {
