--- a/src/app/blog/article/article.component.html
+++ b/src/app/blog/article/article.component.html
@@ -1,6 +1,8 @@
 <div class="container">
     <div class="article" *ngIf="article; else articleNotFound">
-        <section class="article__left" [style.background-color]="article.color">
+        <section class="article__left"
+                 [class.article__left--full]="descriptionExpanded"
+                 [style.background-color]="article.color">
             <header class="article__header">
                 <a [routerLink]="['/blog', 'articles']">
                     <mat-icon class="icon--round">keyboard_backspace</mat-icon>
@@ -39,7 +41,7 @@
                 </button>
             </div>
         </section>
-        <section class="article__right">
+        <section class="article__right" *ngIf="!descriptionExpanded">
             <header class="article__header">
                 <div></div>
                 <mat-icon class="icon--round">launch</mat-icon>
